--- a/Dumbledroid/AndroidManifest.xml
+++ b/Dumbledroid/AndroidManifest.xml
@@ -6,12 +6,9 @@
 
     <uses-sdk android:minSdkVersion="7" />
 
-    <application
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+    <application >
         <activity
-            android:name=".activities.TestActivity"
-            android:label="@string/app_name" >
+            android:name=".activities.TestActivity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
