--- a/DumbledroidExample/AndroidManifest.xml
+++ b/DumbledroidExample/AndroidManifest.xml
@@ -24,6 +24,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".activities.JediActivity"
+            android:label="@string/title_activity_jedi"
+            android:parentActivityName=".activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
