--- a/DumbledroidExample/AndroidManifest.xml
+++ b/DumbledroidExample/AndroidManifest.xml
@@ -14,7 +14,8 @@
     <application
         android:allowBackup="false"
         android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name" >
+        android:label="@string/app_name"
+        android:theme="@style/AppTheme" >
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
