Adds FlickrActivity (no image loading yet).

--- a/DumbledroidExample/AndroidManifest.xml
+++ b/DumbledroidExample/AndroidManifest.xml
@@ -41,6 +41,14 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
         </activity>
+        <activity
+            android:name=".activities.FlickrActivity"
+            android:label="@string/title_activity_flickr"
+            android:parentActivityName=".activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
     </application>
 
 </manifest>
