Adds XML parsing and basic file creation (no field lookups, no recursion).

--- a/EclipsePlugin/build.properties
+++ b/EclipsePlugin/build.properties
@@ -3,4 +3,5 @@ output.. = bin/
 bin.includes = plugin.xml,\
                META-INF/,\
                .,\
-               icons/
+               icons/,\
+               libs/dom4j-1.6.1.jar
