--- a/.gitignore
+++ b/.gitignore
@@ -15,4 +15,22 @@ gen/
 # Local configuration file (sdk path, etc)
 local.properties
 
+# Eclipse project files
+.classpath
+.project
+
+# Android Studio
+*.iml
+*.iws
+*.ipr
+.idea/
+.gradle/
+local.properties
+
+*/build/*
+
+*~
+*.swp
+
+# Mac OS system files
 *.DS_Store
