--- a/Dumbledroid/Dumbledroid/build.gradle
+++ b/Dumbledroid/Dumbledroid/build.gradle
@@ -2,22 +2,26 @@ apply plugin: 'android-library'
 
 android {
     compileSdkVersion 19
-    buildToolsVersion "19.0.1"
+    buildToolsVersion "19.1.0"
 
     defaultConfig {
         minSdkVersion 7
         targetSdkVersion 19
         versionCode 1
-        versionName "1.0"
+        versionName "1.0.1"
     }
-    release {
-        runProguard false
-        proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+
+    buildTypes {
+        release {
+            runProguard false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
+        }
     }
 }
 
 apply plugin: 'maven'
 
+// ./gradlew clean build uploadArchives
 uploadArchives {
     repositories.mavenDeployer {
         repository(url: "file:///Users/leocadiotine/Desktop/maven-repository/")
