--- a/Dumbledroid/gradle/wrapper/gradle-wrapper.properties
+++ b/Dumbledroid/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Wed Jan 29 20:30:13 BRT 2014
+#Tue Oct 28 21:36:29 GMT-03:00 2014
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=http\://services.gradle.org/distributions/gradle-1.10-bin.zip
+distributionUrl=http\://services.gradle.org/distributions/gradle-1.12-all.zip
